# Sarla

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sarla.py
.github/workflows/: format.yml  python-app.yml
deploy/: README.md  inventory.ini
deploy/tasks/: main.yml
deploy/vars/: main.yml
sarla/client/: client.py
sarla/client/utils/: ascii.py
sarla/implant/src/: Makefile  implant.c  implant.ps1  imports.h  patch.h  paths.h  settings.h  wurm.c  wurm_http.c
sarla/server/: server.py
sarla/server/common/: authentication.py  settings.py
sarla/server/src/: authorization.py  handler.py  http.py  http_server.py  negotiate.py  register.py  registration.py
sarla/server/src/utils/: patch.py  pwnboard.py  settings.py  tables.py
sarla/src/: app.py
sarla/src/agent/: Makefile  wurm.c
sarla/src/client/: Makefile  client.py  wurm.c
sarla/src/client/common/: ascii.py  tables.py
sarla/src/common/: authentication.py
sarla/src/server/: server.py
sarla/src/server/common/: authentication.py  pwnboard.py
sarla/src/templates/: register.html
tests/: test.py  test_registration.py  test_sarla.py
