[tool.poetry]
name = "sarla"
version = "1.0.0-alpha.0"
description = ""
authors = ["Real-Cryillic <cunningham.dom@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
termcolor = "^2.1.1"
prompt-toolkit = "^3.0.36"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
