[tool.poetry]
name = "sarla"
version = "0.1.0"
description = ""
authors = ["Real-Cryillic <cunningham.dom@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
